docs/api/qiskit-ibm-runtime/0.49/schema-common.mdx
---
title: common (v0.49)
description: API reference for ibm_quantum_schemas.common in qiskit-ibm-runtime v0.49
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: ibm_quantum_schemas.common
---

<span id="common-models-ibm-quantum-schemas-common" />

<span id="module-ibm_quantum_schemas.common" />

# Common models

`ibm_quantum_schemas.common`

Models that provide common functionality.

## Classes

|                                                                                                                                                                                                                                   |                                                                                 |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- |
| [`OpenQasm3DataModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-open-qasm-3-data-model#ibm_quantum_schemas.common.OpenQasm3DataModel "ibm_quantum_schemas.common.OpenQasm3DataModel")                         | OpenQASM3-encoded objects.                                                      |
| [`QpyDataModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-qpy-data-model#ibm_quantum_schemas.common.QpyDataModel "ibm_quantum_schemas.common.QpyDataModel")                                                   | QPY-encoded Qiskit objects.                                                     |
| [`QpyDataV13ToV17Model`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-qpy-data-v13-to-v17-model#ibm_quantum_schemas.common.QpyDataV13ToV17Model "ibm_quantum_schemas.common.QpyDataV13ToV17Model")                | QPY encoded circuit list with restricted version range.                         |
| [`QpyModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-qpy-model#ibm_quantum_schemas.common.QpyModel "ibm_quantum_schemas.common.QpyModel")                                                                    | A QPY-encoded quantum circuit.                                                  |
| [`QpyModelV13ToV16`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-qpy-model-v13-to-v16#ibm_quantum_schemas.common.QpyModelV13ToV16 "ibm_quantum_schemas.common.QpyModelV13ToV16")                                 | QPY encoded circuits with restricted version range.                             |
| [`QpyModelV13ToV17`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-qpy-model-v13-to-v17#ibm_quantum_schemas.common.QpyModelV13ToV17 "ibm_quantum_schemas.common.QpyModelV13ToV17")                                 | QPY encoded circuits with restricted version range.                             |
| [`CompressedQpyDataModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-compressed-qpy-data-model#ibm_quantum_schemas.common.CompressedQpyDataModel "ibm_quantum_schemas.common.CompressedQpyDataModel")          | QPY-encoded Qiskit objects with compression.                                    |
| [`BaseParamsModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-base-params-model#ibm_quantum_schemas.common.BaseParamsModel "ibm_quantum_schemas.common.BaseParamsModel")                                       | Model of a runtime program's inner parameters.                                  |
| [`PauliLindbladMapModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-pauli-lindblad-map-model#ibm_quantum_schemas.common.PauliLindbladMapModel "ibm_quantum_schemas.common.PauliLindbladMapModel")              | Encoding of a sparse Pauli Lindblad map.                                        |
| [`SamplexModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-samplex-model#ibm_quantum_schemas.common.SamplexModel "ibm_quantum_schemas.common.SamplexModel")                                                    | A QPY-encoded quantum circuit.                                                  |
| [`SamplexModelSSV1`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-samplex-model-ssv-1#ibm_quantum_schemas.common.SamplexModelSSV1 "ibm_quantum_schemas.common.SamplexModelSSV1")                                  | A samplex model constrained to use samplex serialization version (SSV) 1.       |
| [`SamplexModelSSV1ToSSV2`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-samplex-model-ssv-1-to-ssv-2#ibm_quantum_schemas.common.SamplexModelSSV1ToSSV2 "ibm_quantum_schemas.common.SamplexModelSSV1ToSSV2")       | A samplex model constrained to use samplex serialization versions (SSV) 1 or 2. |
| [`TensorModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-tensor-model#ibm_quantum_schemas.common.TensorModel "ibm_quantum_schemas.common.TensorModel")                                                        | Model of tensor data.                                                           |
| [`F64TensorModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-f-64-tensor-model#ibm_quantum_schemas.common.F64TensorModel "ibm_quantum_schemas.common.F64TensorModel")                                          | Model of tensor data specialized to f64.                                        |
| [`CompressedTensorModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-compressed-tensor-model#ibm_quantum_schemas.common.CompressedTensorModel "ibm_quantum_schemas.common.CompressedTensorModel")               | Model of compressed tensor data.                                                |
| [`F64CompressedTensorModel`](/docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-common-f-64-compressed-tensor-model#ibm_quantum_schemas.common.F64CompressedTensorModel "ibm_quantum_schemas.common.F64CompressedTensorModel") | Model of compressed tensor data specialized to f64.                             |

